correction contrast 1

--- a/style.css
+++ b/style.css
@@ -661,7 +661,7 @@ label,
 a {
 	font-family: "helvetica";
 	font-weight: 400;
-	color: #575757;
+	color: #643534;
 }
 
 .container {
